--- a/web/H5/signUp.html
+++ b/web/H5/signUp.html
@@ -88,7 +88,7 @@
             $help.html('').addClass('hide');
             return true;
         }
-        // 报名提交
+        // 报名提交 表单提交
         function signUpHandler(el){
             var $phone=$('.phone');
             var $validcode=$('.validcode');
