--- a/web/H5/ShareCourse.html
+++ b/web/H5/ShareCourse.html
@@ -135,7 +135,7 @@
     <script src="js/artTemplate.js"></script>
     <script src="js/shareCourse.js"></script>
     <script>
-        var guid = GetUrlParam("guid") || '4199e40b-3b3d-4e3a-b3d1-070854f5b0f3';
+        var guid = GetUrlParam("Guid") || GetUrlParam("guid") || '4199e40b-3b3d-4e3a-b3d1-070854f5b0f3';
         $.ajax({
             type: 'get',
             cache: false,
