--- a/web/H5/ShareInvestPlace.html
+++ b/web/H5/ShareInvestPlace.html
@@ -31,14 +31,16 @@
             <td><a onclick="godown()">立即下载</a></td>
         </tr>
     </table>
-    <div class="container loading">
+    <div class="container loading"></div>
+    <!-- 主内容模板 -->
+    <script type="text/html" id="contentTemplate">
+        <%var imgUrl='http://www.cn-qch.com:8002/attach/images/'%>
+        <%var avatorUrl='http://www.cn-qch.com:8002/attach/user/'%>
+        <%var defaultAvatorUrl='img/avator.png'%>
         <header>
-            <div class="head-nav">
-                <!--<a class="left"><i class="fa fa-angle-left"></i></a>
-                <a class="right"><i class="fa fa-share-square-o"></i></a>-->
-            </div>
+            <div class="head-nav"></div>
             <div class="box" id="divTop">
-                <img>
+                <img src="<%=imgUrl + data.logo%>">
                 <h2 id="hName"></h2>
             </div>
         </header>
@@ -64,96 +66,110 @@
         <footer>
             <a onclick="godown()">提交项目</a>
         </footer>
-    </div>
+    </script>
     <script src="js/jquery.min.js"></script>
-    <script src="js/loader.js"></script>
+    <script src="js/artTemplate.js"></script>
     <script type="text/javascript">
         function godown() {
             location.href = 'http://www.cn-qch.com/app';
         }
-        var guid = GetUrlParam("Guid") || GetUrlParam("guid");
-        if (!guid || guid == "") {
-            guid = '8119af13-0086-4931-8707-69c4f9dc1ba4';
-        }
-        //获取投资机构详情
-        $.ajax({
-            type: 'post',
-            cache: false,
-            dataType: 'json',
-            url: '../QCH_InvestPlace/Ajax_InvestPlace.ashx',
-            data: [{
-                name: 'Action',
-                value: 'GetInvestPlaceView'
-            }, {
-                name: 'Guid',
-                value: guid
-            }],
-            success: function(data) {
-                if (data) {
-                    var avator = 'img/avator.png';
-
-                    if (data.t_InvestPlace_ConverPic && data.t_InvestPlace_ConverPic != "") {
-                        avator = imgUrl + data.t_InvestPlace_ConverPic;
-                    }
-                    var topinfo = '<div class="box" id="divTop"><img src="' + avator + '"><h2 id="hName">' + data.t_InvestPlace_Title + '</h2></div>';
-                    $("#divTop").replaceWith(topinfo);
-                    //接收项目
-                    $("#spCases").text(data.CaseCount);
-                    //入驻成员
-                    $("#spEnter").text(data.MemberCount);
-                    //详细介绍
-                    $("#pInfo").text(data.t_InvestPlace_Instruction);
-                    //孵化案例
-                    var cases = '';
-                    if (data.Cases.length > 0) {
-                        var model = data.Cases;
-                        for (var item in model) {
-                            cases += '<li><a><img src="' + imgUrl + model[item].CasePic + '">' + model[item].CaseName + '</a></li>';
-                        }
-                        cases += '<li><a><img src="img/more_btn.png">查看更多</a></li>'
-                        $("#ulCase").append(cases);
-                        winResize($('#ulCase img'));
-                    }
-                    //入驻成员
-                    var member = '';
-                    if (data.Members.length > 0) {
-                        var model = data.Members;
-                        for (var item in model) {
-                        if (model[item].UserPic && model[item].UserPic != "") {
-                            avator = avatorUrl + model[item].UserPic;
-                            member += '<tr><td><a><img src="' + avator + '"></a></td><td><h3>' + model[item].UserName + '</h3><p>' + model[item].OneWord + '</p></td></tr>';
-                        }
-                        }
-                        $("#members").append(member);
-                        winResize($('#members img'));
-                    }
-                }
-            }
-        })
-
-        function winResize($e) {
-            $e.css({
-                height: $e.width(),
-                borderRadius: $e.width() / 2
-            })
-        }
+        //获取Url中的参数
         function GetUrlParam(name) {
             var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
             var r = window.location.search.substr(1).match(reg);
-            if (r != null) return unescape(r[2]);
-            return null;
+            if (r != null) return unescape(r[2]); return null;
         }
-        $(function() {
-            $(window).resize(function() {
-                winResize($('.case img'));
-                winResize($('.member img'))
-            }).resize();
+        var guid = GetUrlParam("Guid") || GetUrlParam("guid") || '35b6d02d-3f2d-4b45-bf4d-e54808561069';
+        $.ajax({
+            type: 'get',
+            cache: false,
+            dataType: 'json',
+            url: 'http://120.25.106.244:9001/api/Invest/GetInvestPlace',
+            data: { guid: guid },
+            success: function (data) {
+                $('.container').html(template('contentTemplate', { data: data }));
+                $('.container').removeClass('loading').siblings('.shade-div').remove();
+            }
         })
-        $(function() {
-            $(document).ajaxStop(function() {
-                imageLoader(removeShade);
-            })
-        })
+        //获取投资机构详情
+        // $.ajax({
+        //     type: 'post',
+        //     cache: false,
+        //     dataType: 'json',
+        //     url: '../QCH_InvestPlace/Ajax_InvestPlace.ashx',
+        //     data: [{
+        //         name: 'Action',
+        //         value: 'GetInvestPlaceView'
+        //     }, {
+        //         name: 'Guid',
+        //         value: guid
+        //     }],
+        //     success: function(data) {
+        //         if (data) {
+        //             var avator = 'img/avator.png';
+
+        //             if (data.t_InvestPlace_ConverPic && data.t_InvestPlace_ConverPic != "") {
+        //                 avator = imgUrl + data.t_InvestPlace_ConverPic;
+        //             }
+        //             var topinfo = '<div class="box" id="divTop"><img src="' + avator + '"><h2 id="hName">' + data.t_InvestPlace_Title + '</h2></div>';
+        //             $("#divTop").replaceWith(topinfo);
+        //             //接收项目
+        //             $("#spCases").text(data.CaseCount);
+        //             //入驻成员
+        //             $("#spEnter").text(data.MemberCount);
+        //             //详细介绍
+        //             $("#pInfo").text(data.t_InvestPlace_Instruction);
+        //             //孵化案例
+        //             var cases = '';
+        //             if (data.Cases.length > 0) {
+        //                 var model = data.Cases;
+        //                 for (var item in model) {
+        //                     cases += '<li><a><img src="' + imgUrl + model[item].CasePic + '">' + model[item].CaseName + '</a></li>';
+        //                 }
+        //                 cases += '<li><a><img src="img/more_btn.png">查看更多</a></li>'
+        //                 $("#ulCase").append(cases);
+        //                 winResize($('#ulCase img'));
+        //             }
+        //             //入驻成员
+        //             var member = '';
+        //             if (data.Members.length > 0) {
+        //                 var model = data.Members;
+        //                 for (var item in model) {
+        //                 if (model[item].UserPic && model[item].UserPic != "") {
+        //                     avator = avatorUrl + model[item].UserPic;
+        //                     member += '<tr><td><a><img src="' + avator + '"></a></td><td><h3>' + model[item].UserName + '</h3><p>' + model[item].OneWord + '</p></td></tr>';
+        //                 }
+        //                 }
+        //                 $("#members").append(member);
+        //                 winResize($('#members img'));
+        //             }
+        //         }
+        //     }
+        // })
+
+        // function winResize($e) {
+        //     $e.css({
+        //         height: $e.width(),
+        //         borderRadius: $e.width() / 2
+        //     })
+        // }
+        // function GetUrlParam(name) {
+        //     var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+        //     var r = window.location.search.substr(1).match(reg);
+        //     if (r != null) return unescape(r[2]);
+        //     return null;
+        // }
+        // $(function() {
+        //     $(window).resize(function() {
+        //         winResize($('.case img'));
+        //         winResize($('.member img'))
+        //     }).resize();
+        // })
+        // $(function() {
+        //     $(document).ajaxStop(function() {
+        //         imageLoader(removeShade);
+        //     })
+        // })
     </script>
 
 </body>
