--- a/web/H5/ShareActivity.html
+++ b/web/H5/ShareActivity.html
@@ -63,7 +63,7 @@
                     <li><label>主 办 方:</label><b><%=data.sponsor%></b></li>
                     <li><label>活动费用:</label><span><%=data.activityCost>0?data.activityCost.toFixed(2):'免费'%></span></li>
                     <li><label>咨询电话:</label><a href="<%='tel://' + data.telephone%>"><%=data.telephone%></a></li>
-                    <li><label>活动时间:</label><span><%=data.activityTime%></span></li>
+                    <li><label>活动时间:</label><span><%=formatDate(data.activityTime)+' - '+formatDate(data.endTime)%></span></li>
                     <li><label>活动地点:</label><span><%=data.activityAddress%></span></li>
                 </ul>
             </div>
@@ -248,6 +248,24 @@
                 }, 600);
             }, 800)
         }
+        // 解析日期 视图助手函数
+        template.helper('formatDate', function (dateStr, opt) {
+            var ymd = opt && opt.ymd ? opt.ymd : '/';
+            var hms = opt && opt.hms ? opt.hms : ':';
+            var date = new Date(/^(\d)+$/.test(dateStr) ? parseInt(dateStr) : dateStr);
+            var year = date.getFullYear();
+            var month = date.getMonth() + 1;
+            month = month > 9 ? month : '0' + month;
+            var day = date.getDate();
+            day = day > 9 ? day : '0' + day;
+            var hour = date.getHours();
+            hour = hour > 9 ? hour : '0' + hour;
+            var minute = date.getMinutes();
+            minute = minute > 9 ? minute : '0' + minute;
+            var sec = date.getSeconds();
+            sec = sec > 9 ? sec : '0' + sec;
+            return month + ymd + day + ' ' + hour + hms + minute;
+        })
     </script>
 </body>
 </html>
